<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jamiahus.learningandroid.MainActivity">

    <Button
        android:id="@+id/Dog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DogButtonName"
        android:textSize="@dimen/TextSize_Button" />

    <Button
        android:id="@+id/Cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CatButtonName"
        android:textSize="@dimen/TextSize_Button" />

    <ImageView
        android:id="@+id/animalView"
        android:layout_width="match_parent"
        android:layout_height="349dp"
        android:contentDescription="@string/ImageDisplayDiscription"
        android:src="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/SendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SendButtonName"
        android:textSize="@dimen/TextSize_Button" />
</LinearLayout>
